# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/multimedia/av_codec/config.gni")

module_output_path = "av_codec"

avcodec_unittest_cflags = [
  "-std=c++17",
  "-frtti",
  "-fexceptions",
  "-Wall",
  "-fno-common",
  "-fstack-protector-strong",
  "-Wshadow",
  "-FPIC",
  "-FS",
  "-O2",
  "-D_FORTIFY_SOURCE=2",
  "-fvisibility=hidden",
  "-Wformat=2",
  "-Wdate-time",
  "-Werror",
  "-Wextra",
  "-Wimplicit-fallthrough",
  "-Wsign-compare",
  "-Wunused-parameter",
]

##################################################################################################################
ohos_unittest("avformat_capi_unit_test") {
  module_out_path = module_output_path
  include_dirs = [
    "./",
    "./capi",
    "$av_codec_root_dir/interfaces/inner_api/native",
    "$av_codec_root_dir/interfaces/kits/c",
  ]

  cflags = avcodec_unittest_cflags

  if (multimedia_av_codec_support_codec) {
    sources = [
      "./avformat_unit_test.cpp",
      "./capi/avformat_capi_mock.cpp",
      "./capi/avformat_capi_mock_factory.cpp",
    ]
  }

  deps = [ "$av_codec_root_dir/interfaces/kits/c:capi_packages" ]
  public_deps = [ "$av_codec_root_dir/services/utils:av_codec_format" ]
  resource_config_file =
      "$av_codec_root_dir/test/unittest/resources/ohos_test.xml"
}

##################################################################################################################
ohos_unittest("avformat_native_unit_test") {
  module_out_path = module_output_path
  include_dirs = [
    "./",
    "./native",
    "$av_codec_root_dir/interfaces/inner_api/native",
    "$av_codec_root_dir/interfaces/kits/c",
  ]
  cflags = avcodec_unittest_cflags
  sources = [
    "./avformat_unit_test.cpp",
    "./native/avformat_native_mock.cpp",
    "./native/avformat_native_mock_factory.cpp",
  ]
  public_deps = [ "$av_codec_root_dir/services/utils:av_codec_format" ]
  resource_config_file =
      "$av_codec_root_dir/test/unittest/resources/ohos_test.xml"
}
