# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/multimedia/av_codec/config.gni")

module_output_path = "av_codec/unittest"

vcodec_unittest_cflags = [
  "-std=c++17",
  "-fno-rtti",
  "-fno-exceptions",
  "-Wall",
  "-fno-common",
  "-fstack-protector-strong",
  "-Wshadow",
  "-FPIC",
  "-FS",
  "-O2",
  "-D_FORTIFY_SOURCE=2",
  "-fvisibility=hidden",
  "-Wformat=2",
  "-Wdate-time",
  "-Werror",
  "-Wextra",
  "-Wimplicit-fallthrough",
  "-Wsign-compare",
  "-Wunused-parameter",
]

#################################################################################################################videodec
ohos_unittest("videodec_capi_unit_test") {
  module_out_path = module_output_path
  include_dirs = [
    "./",
    "./capi",
    "$av_codec_root_dir/../../graphic/graphic_2d/frameworks/surface/include",
    "$av_codec_root_dir/../../graphic/graphic_2d/interfaces/inner_api",
    "$av_codec_root_dir/../../graphic/graphic_2d/interfaces/inner_api/surface",
    "$av_codec_root_dir/../../graphic/graphic_2d/interfaces/inner_api/common",
    "$av_codec_root_dir/../../graphic/graphic_2d/interfaces/innerkits/surface",
    "$av_codec_root_dir/../../graphic/graphic_2d/interfaces/innerkits/surface/include",
    "$av_codec_root_dir/../../window/window_manager/interfaces/innerkits/wm",
    "$av_codec_root_dir/../../multimedia/image_framework/interfaces/innerkits/include",
    "$av_codec_root_dir/interfaces/inner_api/native",
    "$av_codec_root_dir/interfaces/kits/c",
    "$av_codec_root_dir/test/unittest/common",
    "$av_codec_root_dir/test/unittest/common/common_mock",
    "$av_codec_root_dir/test/unittest/common/common_mock/avmemory/capi",
    "$av_codec_root_dir/test/unittest/common/common_mock/surface/capi",
    "$av_codec_root_dir/test/unittest/format_test",
    "$av_codec_root_dir/test/unittest/format_test/capi",
    "$av_codec_root_dir/test/unittest/vcodec_test",
    "$av_codec_root_dir/test/unittest/vcodec_test/capi",
    "$av_codec_root_dir/test/unittest/vcodec_test/sample",
  ]

  cflags = vcodec_unittest_cflags

  if (multimedia_av_codec_support_codec) {
    sources = [
      "$av_codec_root_dir/test/unittest/common/common_mock/avmemory/capi/avmemory_capi_mock.cpp",
      "$av_codec_root_dir/test/unittest/common/common_mock/surface/capi/surface_capi_mock.cpp",
      "$av_codec_root_dir/test/unittest/format_test/capi/avformat_capi_mock.cpp",
      "$av_codec_root_dir/test/unittest/format_test/capi/avformat_capi_mock_factory.cpp",
      "./capi/vcodec_capi_mock_factory.cpp",
      "./capi/videodec_capi_mock.cpp",
      "./sample/vdec_sample.cpp",
      "./videodec_unit_test.cpp",
    ]
  }
  deps = [
    "$av_codec_root_dir/../../graphic/graphic_2d:libsurface",
    "$av_codec_root_dir/../../graphic/graphic_2d/frameworks/surface:surface",
    "$av_codec_root_dir/../../graphic/graphic_2d/rosen/modules/render_service_client:librender_service_client",
    "$av_codec_root_dir/../../graphic/graphic_2d/utils:libgraphic_utils",
    "$av_codec_root_dir/../../graphic/graphic_2d/utils:sync_fence",
    "$av_codec_root_dir/../../window/window_manager/wm:libwm",
    "$av_codec_root_dir/interfaces/inner_api/native:av_codec_client",
    "$av_codec_root_dir/interfaces/kits/c:native_av_codec_codec",
    "$av_codec_root_dir/interfaces/kits/c:native_av_codec_core",
  ]
  external_deps = [
    "av_codec:av_codec_client",
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  resource_config_file =
      "$av_codec_root_dir/test/unittest/resources/ohos_test.xml"
}

#################################################################################################################videodec
ohos_unittest("videodec_inner_unit_test") {
  module_out_path = module_output_path
  include_dirs = [
    "./",
    "./vcodec_test",
    "$av_codec_root_dir/../../graphic/graphic_2d/frameworks/surface/include",
    "$av_codec_root_dir/../../graphic/graphic_2d/interfaces/inner_api",
    "$av_codec_root_dir/../../graphic/graphic_2d/interfaces/innerkits/surface",
    "$av_codec_root_dir/../../graphic/graphic_2d/interfaces/innerkits/surface/include",
    "$av_codec_root_dir/../../window/window_manager/interfaces/innerkits/wm",
    "$av_codec_root_dir/interfaces/inner_api/inner",
    "$av_codec_root_dir/interfaces/kits/c",
    "$av_codec_root_dir/test/unittest/common",
    "$av_codec_root_dir/test/unittest/common/common_mock",
    "$av_codec_root_dir/test/unittest/common/common_mock/avmemory/inner",
    "$av_codec_root_dir/test/unittest/common/common_mock/surface/inner",
    "$av_codec_root_dir/test/unittest/format_test",
    "$av_codec_root_dir/test/unittest/format_test/inner",
    "$av_codec_root_dir/test/unittest/vcodec_test",
    "$av_codec_root_dir/test/unittest/vcodec_test/inner",
    "$av_codec_root_dir/test/unittest/vcodec_test/sample",
  ]

  cflags = vcodec_unittest_cflags

  if (multimedia_av_codec_support_codec) {
    sources = [
      "$av_codec_root_dir/test/unittest/common/common_mock/avmemory/inner/avmemory_inner_mock.cpp",
      "$av_codec_root_dir/test/unittest/common/common_mock/surface/inner/surface_inner_mock.cpp",
      "$av_codec_root_dir/test/unittest/format_test/inner/avformat_inner_mock.cpp",
      "$av_codec_root_dir/test/unittest/format_test/inner/avformat_inner_mock_factory.cpp",
      "./inner/vcodec_inner_mock_factory.cpp",
      "./inner/videodec_inner_mock.cpp",
      "./sample/vdec_sample.cpp",
      "./videodec_unit_test.cpp",
    ]
  }
  deps = [
    "$av_codec_root_dir/../../graphic/graphic_2d:libsurface",
    "$av_codec_root_dir/../../graphic/graphic_2d/frameworks/surface:surface",
    "$av_codec_root_dir/../../graphic/graphic_2d/rosen/modules/render_service_client:librender_service_client",
    "$av_codec_root_dir/../../graphic/graphic_2d/utils:libgraphic_utils",
    "$av_codec_root_dir/../../graphic/graphic_2d/utils:sync_fence",
    "$av_codec_root_dir/../../window/window_manager/wm:libwm",
    "$av_codec_root_dir/interfaces/inner_api/native:av_codec_client",
  ]
  external_deps = [
    "av_codec:av_codec_client",
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  resource_config_file =
      "$av_codec_root_dir/test/unittest/resources/ohos_test.xml"
}
