import("//build/ohos.gni")
import("//foundation/multimedia/av_codec/config.gni")

ohos_static_library("av_codec_audio_ffmpeg_codec"){
    include_dirs=[
        "//foundation/graphic/graphic_2d/frameworks/surface/include",
        "//commonlibrary/c_utils/base/include",
        "$av_codec_root_dir/services/engine/base/include",
        "$av_codec_root_dir/services/engine/common/include",
        "$av_codec_root_dir/services/engine/factory",
        "$av_codec_root_dir/services/utils/include",
        "$av_codec_root_dir/services/engine/codec/include/audio",
        "$av_codec_root_dir/services/engine/codec/include/audio/decoder",
        "$av_codec_root_dir/interfaces/inner_api/native",
        "$av_codec_root_dir/interfaces/kits/c",
        "$av_codec_root_dir/services/dfx/include",
        "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent/include",
        "//third_party/ffmpeg",
    ]

    sources=[
        "$av_codec_root_dir/services/services/codec/server/engine_factory_repo.cpp",
        "$av_codec_root_dir/services/engine/codec/audio/audio_buffer_info.cpp",
        "$av_codec_root_dir/services/engine/codec/audio/audio_buffers_manager.cpp",
        "$av_codec_root_dir/services/engine/codec/audio/audio_codec_worker.cpp",
        "$av_codec_root_dir/services/engine/codec/audio/audio_ffmpeg_adapter.cpp",
        "$av_codec_root_dir/services/engine/codec/audio/decoder/audio_ffmpeg_decoder_plugin.cpp",
        "$av_codec_root_dir/services/engine/codec/audio/decoder/audio_ffmpeg_aac_decoder_plugin.cpp",
        "$av_codec_root_dir/services/engine/codec/audio/decoder/audio_ffmpeg_flac_decoder_plugin.cpp",
        "$av_codec_root_dir/services/engine/codec/audio/decoder/audio_ffmpeg_mp3_decoder_plugin.cpp",
        "$av_codec_root_dir/services/engine/codec/audio/decoder/audio_ffmpeg_vorbis_decoder_plugin.cpp",
    ]

    deps=[
        "//third_party/ffmpeg:libohosffmpeg",
        "//foundation/multimedia/av_codec/services/engine/common:av_codec_engine_common",
        "//foundation/multimedia/av_codec/services/engine/base:av_codec_codec_base",
    ]

    public_deps= [
        "//commonlibrary/c_utils/base:utils",
        "//foundation/multimedia/av_codec/services/utils:av_codec_service_utils",
        "//foundation/multimedia/av_codec/services/utils:av_codec_format",
        "//foundation/multimedia/av_codec/services/dfx:av_codec_service_dfx",
        "//third_party/bounds_checking_function:libsec_static"
        ]
    
    external_deps = [
        "c_utils:utils",
        "hisysevent_native:libhisysevent",
        "hitrace_native:hitrace_meter",
        "hiviewdfx_hilog_native:libhilog",
        "graphic_standard:surface" 
    ]

    subsystem_name = "multimedia"
    part_name = "av_codec"

}