# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/multimedia/av_codec/config.gni")

MEDIA_ROOT_DIR = "//foundation/multimedia/av_codec/"
module_output_path = "av_codec/moduletest"

swdecoder_moduletest_native_include_dirs = [
  "./include",
  "//graphic/graphic_2d/interfaces/innerkits/surface",
  "//foundation//window/window_manager/interfaces/innerkits/wm",
  "$MEDIA_ROOT_DIR/interfaces/inner_api/native",
  "$MEDIA_ROOT_DIR/interfaces/kits/c",
]

swdecoder_moduletest_cflags = [
  "-std=c++17",
  "-fno-rtti",
  "-fno-exceptions",
  "-Wall",
  "-fno-common",
  "-fstack-protector-strong",
  "-Wshadow",
  "-FPIC",
  "-FS",
  "-O2",
  "-D_FORTIFY_SOURCE=2",
  "-fvisibility=hidden",
  "-Wformat=2",
  "-Wdate-time",
  "-Werror",
  "-Wextra",
  "-Wimplicit-fallthrough",
  "-Wsign-compare",
  "-Wunused-parameter",
]

##################################################################################################################
ohos_unittest("swdecoder_native_module_test") {
  module_out_path = module_output_path
  include_dirs = swdecoder_moduletest_native_include_dirs
  include_dirs += [
    "./",
  ]

  cflags = swdecoder_moduletest_cflags

  if (multimedia_av_codec_support_codec) {
    sources = [
      "./src/api_test.cpp",
      #"./src/func_test.cpp",
      #"./src/perf_test.cpp",
      #"./src/reli_test.cpp",
      #"./src/state_test.cpp",
      #"./src/compatibility_test.cpp",
      "./src/videodec_ndk_sample.cpp",
    ]
  }

  deps = [
    "//foundation/graphic/graphic_2d:libsurface",
    "//foundation/graphic/graphic_2d/frameworks/surface:surface",
    "//foundation/graphic/graphic_2d/rosen/modules/render_service_client:librender_service_client",
    "//foundation/multimedia/av_codec/interfaces/inner_api/native:av_codec_client",
    "//foundation/multimedia/av_codec/interfaces/kits/c:native_av_codec_core",
    "//foundation/multimedia/av_codec/interfaces/kits/c:native_av_codec_codec",
    "//foundation/window/window_manager/wm:libwm",
  ]

  resource_config_file = "//foundation/multimedia/av_codec/test/moduletest/resources/ohos_test.xml"
}
