# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_executable("hdecoder_demo") {
  install_enable = false
  subsystem_name = "multimedia"
  part_name = "av_codec"
  sources = [
    "hdecoder_test.cpp",
    "start_code_detector.cpp",
    "command_parser.cpp",
  ]
  include_dirs = [
    "//foundation/multimedia/av_codec/services/engine/codec/video/hcodec/",
    "//foundation/multimedia/av_codec/interfaces/inner_api/native/",
    "//foundation/multimedia/av_codec/interfaces/kits/c/",
    "//foundation/window/window_manager/interfaces/innerkits/wm/",
  ]
  deps = [
    "//foundation/multimedia/av_codec/services/engine/codec/video/hcodec:hcodec",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//foundation/window/window_manager/wm:libwm",
    "//foundation/graphic/graphic_2d/rosen/modules/render_service_client:librender_service_client",
  ]
}

ohos_executable("hencoder_demo") {
  install_enable = false
  subsystem_name = "multimedia"
  part_name = "av_codec"
  sources = [
    "hencoder_test.cpp",
    "command_parser.cpp",
  ]
  include_dirs = [
    "//foundation/multimedia/av_codec/services/engine/codec/video/hcodec/",
    "//foundation/multimedia/av_codec/interfaces/inner_api/native/",
    "//foundation/multimedia/av_codec/interfaces/kits/c/",
    "//third_party/openmax/api/1.1.2",
    "//drivers/peripheral/codec/interfaces/include/",
  ]
  deps = [
    "//foundation/multimedia/av_codec/services/engine/codec/video/hcodec:hcodec",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
  ]
  external_deps = [
    "drivers_interface_codec:codec_idl_headers",
  ]
}

ohos_executable("create_hcodec_by_capi") {
  install_enable = false
  subsystem_name = "multimedia"
  part_name = "av_codec"
  sources = [
    "create_by_capi.cpp",
  ]
  include_dirs = [
    "//foundation/multimedia/av_codec/services/engine/codec/video/hcodec/",
    "//foundation/multimedia/av_codec/interfaces/kits/c/",
  ]
  deps = [
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//foundation/multimedia/av_codec/interfaces/kits/c:capi_packages",
    "//foundation/multimedia/av_codec/interfaces/inner_api/native:av_codec_client",
  ]
}