# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

config("hcodec_unittest_cfg") {
  cflags_cc = [
    "-fexceptions",
  ]

  include_dirs = [
    "//foundation/multimedia/av_codec/services/engine/codec/video/hcodec/",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include/",
    "//commonlibrary/c_utils/base/include/",
    "//drivers/peripheral/codec/interfaces/include/",
    "//third_party/openmax/api/1.1.2",
    "//foundation/multimedia/av_codec/interfaces/kits/c/",
  ]
}

ohos_unittest("hdecoder_unit_test") {
  testonly = true
  configs = [ ":hcodec_unittest_cfg" ]
  module_out_path = "av_codec/hcodec"
  sources = [
      "hdecoder_unit_test.cpp"
  ]
  deps = [
    "//foundation/multimedia/av_codec/services/engine/codec/video/hcodec:hcodec",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//commonlibrary/c_utils/base:utils",
  ]
  external_deps = [
    "drivers_interface_codec:codec_idl_headers",
    "hdf_core:libhdi",
  ]
}

ohos_unittest("hencoder_unit_test") {
  testonly = true
  configs = [ ":hcodec_unittest_cfg" ]
  module_out_path = "av_codec/hcodec"
  sources = [
      "hencoder_unit_test.cpp",
  ]
  deps = [
    "//foundation/multimedia/av_codec/services/engine/codec/video/hcodec:hcodec",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//commonlibrary/c_utils/base:utils",
  ]
  external_deps = [
    "drivers_interface_codec:codec_idl_headers",
    "hdf_core:libhdi",
  ]
}

ohos_unittest("hcodec_list_unit_test") {
  testonly = true
  configs = [ ":hcodec_unittest_cfg" ]
  module_out_path = "av_codec/hcodec"
  sources = [
      "hcodec_list_unit_test.cpp",
  ]
  deps = [
    "//foundation/multimedia/av_codec/services/engine/codec/video/hcodec:hcodec",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//commonlibrary/c_utils/base:utils",
  ]
  external_deps = [
    "drivers_interface_codec:codec_idl_headers",
    "hdf_core:libhdi",
  ]
}


