# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/multimedia/av_codec/config.gni")

config("hcodec_unittest_cfg") {
  cflags_cc = [ "-fexceptions" ]

  include_dirs = [
    "$av_codec_root_dir/services/engine/codec/video/hcodec/",
    "$av_codec_root_dir/../../../commonlibrary/c_utils/base/include/",
    "$av_codec_root_dir/../../../drivers/peripheral/codec/interfaces/include/",
    "$av_codec_root_dir/../../../third_party/openmax/api/1.1.2",
    "$av_codec_root_dir/interfaces/kits/c/",
  ]
}

ohos_unittest("hdecoder_unit_test") {
  testonly = true
  configs = [ ":hcodec_unittest_cfg" ]
  module_out_path = "av_codec/hcodec"
  sources = [ "hdecoder_unit_test.cpp" ]
  deps = [
    "$av_codec_root_dir/../../../commonlibrary/c_utils/base:utils",
    "$av_codec_root_dir/services/engine/codec/video/hcodec:hcodec",
  ]
  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "drivers_interface_codec:codec_idl_headers",
    "hdf_core:libhdi",
  ]
}

ohos_unittest("hencoder_unit_test") {
  testonly = true
  configs = [ ":hcodec_unittest_cfg" ]
  module_out_path = "av_codec/hcodec"
  sources = [ "hencoder_unit_test.cpp" ]
  deps = [
    "$av_codec_root_dir/../../../commonlibrary/c_utils/base:utils",
    "$av_codec_root_dir/services/engine/codec/video/hcodec:hcodec",
  ]
  external_deps = [
    "drivers_interface_codec:codec_idl_headers",
    "hdf_core:libhdi",
    "hiviewdfx_hilog_native:libhilog",
  ]
}

ohos_unittest("hcodec_list_unit_test") {
  testonly = true
  configs = [ ":hcodec_unittest_cfg" ]
  module_out_path = "av_codec/hcodec"
  sources = [ "hcodec_list_unit_test.cpp" ]
  deps = [
    "$av_codec_root_dir/../../../commonlibrary/c_utils/base:utils",
    "$av_codec_root_dir/services/engine/codec/video/hcodec:hcodec",
  ]
  external_deps = [
    "drivers_interface_codec:codec_idl_headers",
    "hdf_core:libhdi",
    "hiviewdfx_hilog_native:libhilog",
  ]
}
